@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '20'
 
 repositories {
     mavenCentral()
@@ -21,9 +21,9 @@ dependencies {
     implementation 'org.springframework.integration:spring-integration-rsocket:6.0.4'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.integration:spring-integration-rsocket:6.0.4'
-    implementation 'org.springframework.security:spring-security-rsocket:6.0.2'
-    implementation 'org.springframework.security:spring-security-config:6.0.2'
-    implementation 'org.springframework.security:spring-security-messaging:6.0.2'
+    implementation 'org.springframework.security:spring-security-rsocket:6.0.3'
+    implementation 'org.springframework.security:spring-security-config:6.0.3'
+    implementation 'org.springframework.security:spring-security-messaging:6.0.3'
     implementation 'io.cloudevents:cloudevents-spring:2.4.2'
     implementation 'io.cloudevents:cloudevents-json-jackson:2.4.2'
     implementation 'io.rsocket:rsocket-core:1.1.3'
@@ -37,4 +37,16 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
 }
